# file-share

./: .gitignore  README.md  config.json  pyproject.toml  share.py
py_file_server/: __init__.py  __main__.py  server.py
